# libs/dto/src/lib/auth/login-result.dto.ts
@@ -1,3 +1,0 @@
-export class LoginResultDto {
-  access_token = ''
-}
